# AngeES

./: .gitignore  .gitmodules  CMakeLists.txt
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md
assets/: test_flex_engine.mr  test_run_engine.mr
dependencies/submodules/: CMakeLists.txt
docs/superpowers/plans/: 2026-07-15-ui-update-1.14a-menu.md
docs/superpowers/specs/: 2026-07-15-ui-update-1.14a-menu-design.md
es/actions/: actions.mr
es/objects/: objects.mr
include/: combustion_chamber.h  constants.h  driveline_flex.h  engine.h  engine_sim_application.h  filter.h  gas_system.h  platform_file_dialog.h  ring_buffer.h  simulator.h  transmission.h  ui_console.h  ui_controls.h  ui_tab_bar.h  ui_toolbar.h  units.h  vehicle.h  view_manager.h
scripting/include/: actions.h  compiler.h  engine_node.h  object_reference_node.h  transmission_node.h  vehicle_node.h
scripting/src/: compiler.cpp  language_rules.cpp
src/: combustion_chamber.cpp  driveline_flex.cpp  engine.cpp  engine_sim_application.cpp  gas_system.cpp  info_cluster.cpp  main.cpp  piston_engine_simulator.cpp  platform_file_dialog.cpp  platform_file_dialog.mm  simulator.cpp  transmission.cpp  ui_button.cpp  ui_console.cpp  ui_controls.cpp  ui_tab_bar.cpp  ui_toolbar.cpp  vehicle.cpp  view_manager.cpp
test/: driveline_flex_tests.cpp  script_compiler_tests.cpp  simulator_settings_tests.cpp  view_manager_tests.cpp
